fix: texte recherche invisible et boutons immobilier (Réserver)

--- a/resources/css/global.css
+++ b/resources/css/global.css
@@ -4099,6 +4099,8 @@ main {
     font-size: 16px;
     outline: none;
     background: transparent;
+    color: #333;
+    font-weight: 500;
 }
 
 .search-input-field::placeholder {
